Added gauntlet image and changed pass phrase

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <title>Combine The Rings</title>
     <script>
       var checkcode = function(){
+        var password = "gauntlet2020";
         var res = document.getElementById("res").value;
-        console.log("test");
-        if(res == "test") document.getElementById("authorized").innerHTML = "Here is your next clue";
+        if(res == pw) document.getElementById("authorized").innerHTML = "Here is your next clue";
         else document.getElementById("authorized").innerHTML = "";
       }
     </script>
   </head>
   <body>
+    <img width=10% src="gauntletimage.jpeg"/>
     <p>Input Code: </p>
     <input id="res" type="text"/>
     <button onclick="checkcode()">Check</button>
