Fixed variable name

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       var checkcode = function(){
         var password = "gauntlet2020";
         var res = document.getElementById("res").value;
-        if(res == pw) document.getElementById("authorized").innerHTML = "Here is your next clue";
+        if(res == password) document.getElementById("authorized").innerHTML = "Here is your next clue";
         else document.getElementById("authorized").innerHTML = "";
       }
     </script>
