--- a/index.html
+++ b/index.html
@@ -4,17 +4,24 @@
     <title>Combine The Rings</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <style>
+      body {
+        background-color: black;
+        color: white;
+      }
+      body div input {
+        color: white;
+      }
       input {
         border: 0;
         outline: 0;
         background: transparent;
-        border-bottom: 1px solid black;
+        border-bottom: 1px solid white;
       }
     </style>
   </head>
   <body>
     <div class="container">
-      <img width=100% src="gauntletimage.png"/>
+      <img width=100% src="invertedgauntlet.png"/>
       <div style="text-align: center;">
         <input id="res" type="text"/>
         <p id="authorized"></p>
