Added text features and changed password

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Combine The Rings</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="icon" href="g.png">
     <style>
       body {
         background-color: black;
@@ -17,14 +18,24 @@
         background: transparent;
         border-bottom: 1px solid white;
       }
+      img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 90%;
+      }
     </style>
   </head>
   <body>
     <div class="container">
-      <img width=100% src="invertedgauntlet.png"/>
+      <img src="invertedgauntlet.png"/>
+      <div style="text-align:center" id="z">
+      </div>
       <div style="text-align: center;">
         <input id="x" type="text"/>
-        <p id="y"></p>
+        <br/>
+        <br/>
+        <p id="test"></p>
       </div>
       <script>
         var x = document.getElementById("x");
@@ -33,11 +44,34 @@
             checkcode();
           }
         });
+        var m = String.fromCharCode.apply(null, [65, 104, 104, 32, 115, 104, 105, 116, 44, 32, 110, 111, 119, 32, 121, 111, 117, 39, 114, 101, 32, 112, 117, 116, 116, 105, 110, 103, 32, 109, 101, 32, 111, 110, 32, 116, 104, 101, 32, 115, 112, 111, 116]).split('');
+        var i = 0;
+        var chars = ' ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789!@#$%^*()_+{}|:"?-=[]\\;,\'';
+        var maxtries = 10;
+        var currtry = 0;
+        var newFunc = function(){
+          var elem = document.getElementById("test");
+          if(m.length > 0){
+            var randChar = chars.charAt(Math.floor(Math.random() * chars.length));
+            if(elem.innerHTML.length == i){elem.innerHTML += " ";}
+            if(currtry == maxtries) elem.innerHTML = elem.innerHTML.substring(0, elem.innerHTML.length-1) + m[0];
+            else elem.innerHTML = elem.innerHTML.substring(0, elem.innerHTML.length-1) + randChar;
+            if(elem.innerHTML.charAt(i) == m[0]){i++; m.shift(); currtry = 0;}
+            else currtry++;
+          }else{
+            clearInterval(newFunc);
+          }
+        }
         var checkcode = function(){
-          var a1 = String.fromCharCode.apply(null, [103, 118, 64, 125, 84, 94, 64, 99, 115, 64, 102, 117, 78, 94, 56, 75]);
+          var a1 = String.fromCharCode.apply(null, [115, 110, 97, 108, 108, 121, 103, 97, 115, 116, 101, 114]);
           var a2 = x.value;
-          if(a1 == a2) document.getElementById("y").innerHTML = String.fromCharCode.apply(null, [72, 101, 114, 101, 32, 105, 115, 32, 97, 32, 99, 108, 101, 118, 101, 114, 32, 114, 105, 100, 100, 108, 101]);
-          else document.getElementById("y").innerHTML = String.fromCharCode.apply(null, [84, 104, 101, 32, 71, 111, 98, 108, 105, 110, 115, 32, 100, 111, 32, 110, 111, 116, 32, 112, 101, 114, 109, 105, 116, 32, 121, 111, 117, 114, 32, 114, 101, 113, 117, 101, 115, 116, 46, 32, 84, 104, 101, 121, 32, 100, 111, 32, 110, 111, 116, 32, 108, 101, 116, 32, 121, 111, 117, 32, 105, 110, 116, 111, 32, 116, 104, 101, 32, 99, 97, 115, 116, 108, 101, 46]);;
+          if(a1 == a2){
+            document.getElementById("z").innerHTML = String.fromCharCode.apply(null, [60, 100, 105, 118, 32, 99, 108, 97, 115, 115, 61, 34, 114, 111, 119, 34, 62, 60, 100, 105, 118, 32, 99, 108, 97, 115, 115, 61, 34, 99, 111, 108, 45, 115, 109, 34, 62, 60, 116, 97, 98, 108, 101, 32, 99, 108, 97, 115, 115, 61, 34, 116, 97, 98, 108, 101, 32, 116, 97, 98, 108, 101, 45, 98, 111, 114, 100, 101, 114, 108, 101, 115, 115, 34, 32, 115, 116, 121, 108, 101, 61, 34, 98, 97, 99, 107, 103, 114, 111, 117, 110, 100, 45, 99, 111, 108, 111, 114, 58, 98, 108, 97, 99, 107, 59, 99, 111, 108, 111, 114, 58, 119, 104, 105, 116, 101, 59, 109, 97, 114, 103, 105, 110, 58, 97, 117, 116, 111, 59, 119, 105, 100, 116, 104, 58, 53, 48, 37, 34, 62, 60, 116, 114, 62, 60, 116, 104, 32, 115, 116, 121, 108, 101, 61, 34, 116, 101, 120, 116, 45, 97, 108, 105, 103, 110, 58, 99, 101, 110, 116, 101, 114, 34, 32, 99, 111, 108, 115, 112, 97, 110, 61, 34, 50, 34, 62, 67, 104, 114, 105, 115, 116, 105, 110, 101, 60, 47, 116, 104, 62, 60, 47, 116, 114, 62, 60, 116, 114, 62, 60, 116, 100, 32, 115, 116, 121, 108, 101, 61, 34, 116, 101, 120, 116, 45, 97, 108, 105, 103, 110, 58, 99, 101, 110, 116, 101, 114, 59, 34, 62, 65, 108, 101, 120, 60, 47, 116, 100, 62, 60, 116, 100, 32, 115, 116, 121, 108, 101, 61, 34, 116, 101, 120, 116, 45, 97, 108, 105, 103, 110, 58, 99, 101, 110, 116, 101, 114, 59, 34, 62, 66, 101, 110, 110, 101, 116, 116, 60, 47, 116, 100, 62, 60, 47, 116, 114, 62, 60, 116, 114, 62, 60, 116, 100, 32, 115, 116, 121, 108, 101, 61, 34, 116, 101, 120, 116, 45, 97, 108, 105, 103, 110, 58, 99, 101, 110, 116, 101, 114, 59, 34, 62, 67, 104, 114, 105, 115, 116, 101, 110, 60, 47, 116, 100, 62, 60, 116, 100, 32, 115, 116, 121, 108, 101, 61, 34, 116, 101, 120, 116, 45, 97, 108, 105, 103, 110, 58, 99, 101, 110, 116, 101, 114, 59, 34, 62, 75, 97, 105, 116, 108, 121, 110, 60, 47, 116, 100, 62, 60, 47, 116, 114, 62, 60, 47, 116, 97, 98, 108, 101, 62, 60, 47, 100, 105, 118, 62, 60, 100, 105, 118, 32, 99, 108, 97, 115, 115, 61, 34, 99, 111, 108, 45, 115, 109, 34, 62, 60, 116, 97, 98, 108, 101, 32, 99, 108, 97, 115, 115, 61, 34, 116, 97, 98, 108, 101, 32, 116, 97, 98, 108, 101, 45, 98, 111, 114, 100, 101, 114, 108, 101, 115, 115, 34, 32, 115, 116, 121, 108, 101, 61, 34, 98, 97, 99, 107, 103, 114, 111, 117, 110, 100, 45, 99, 111, 108, 111, 114, 58, 98, 108, 97, 99, 107, 59, 99, 111, 108, 111, 114, 58, 119, 104, 105, 116, 101, 59, 109, 97, 114, 103, 105, 110, 58, 97, 117, 116, 111, 59, 119, 105, 100, 116, 104, 58, 53, 48, 37, 34, 62, 60, 116, 114, 62, 60, 116, 104, 32, 115, 116, 121, 108, 101, 61, 34, 116, 101, 120, 116, 45, 97, 108, 105, 103, 110, 58, 99, 101, 110, 116, 101, 114, 34, 99, 111, 108, 115, 112, 97, 110, 61, 34, 50, 34, 62, 74, 117, 108, 105, 97, 60, 47, 116, 104, 62, 60, 47, 116, 114, 62, 60, 116, 114, 62, 60, 116, 100, 32, 115, 116, 121, 108, 101, 61, 34, 116, 101, 120, 116, 45, 97, 108, 105, 103, 110, 58, 99, 101, 110, 116, 101, 114, 59, 34, 62, 68, 114, 101, 119, 60, 47, 116, 100, 62, 60, 116, 100, 32, 115, 116, 121, 108, 101, 61, 34, 116, 101, 120, 116, 45, 97, 108, 105, 103, 110, 58, 99, 101, 110, 116, 101, 114, 59, 34, 62, 71, 97, 114, 114, 101, 116, 116, 60, 47, 116, 100, 62, 60, 47, 116, 114, 62, 60, 116, 114, 62, 60, 116, 100, 32, 115, 116, 121, 108, 101, 61, 34, 116, 101, 120, 116, 45, 97, 108, 105, 103, 110, 58, 99, 101, 110, 116, 101, 114, 59, 34, 62, 77, 97, 121, 97, 60, 47, 116, 100, 62, 60, 116, 100, 32, 115, 116, 121, 108, 101, 61, 34, 116, 101, 120, 116, 45, 97, 108, 105, 103, 110, 58, 99, 101, 110, 116, 101, 114, 59, 34, 62, 83, 97, 110, 110, 97, 60, 47, 116, 100, 62, 60, 47, 116, 114, 62, 60, 47, 116, 97, 98, 108, 101, 62, 60, 47, 100, 105, 118, 62, 60, 100, 105, 118, 32, 99, 108, 97, 115, 115, 61, 34, 99, 111, 108, 45, 115, 109, 34, 62, 60, 116, 97, 98, 108, 101, 32, 99, 108, 97, 115, 115, 61, 34, 116, 97, 98, 108, 101, 32, 116, 97, 98, 108, 101, 45, 98, 111, 114, 100, 101, 114, 108, 101, 115, 115, 34, 32, 115, 116, 121, 108, 101, 61, 34, 98, 97, 99, 107, 103, 114, 111, 117, 110, 100, 45, 99, 111, 108, 111, 114, 58, 98, 108, 97, 99, 107, 59, 99, 111, 108, 111, 114, 58, 119, 104, 105, 116, 101, 59, 109, 97, 114, 103, 105, 110, 58, 97, 117, 116, 111, 59, 119, 105, 100, 116, 104, 58, 53, 48, 37, 34, 62, 60, 116, 114, 62, 60, 116, 104, 32, 115, 116, 121, 108, 101, 61, 34, 116, 101, 120, 116, 45, 97, 108, 105, 103, 110, 58, 99, 101, 110, 116, 101, 114, 34, 99, 111, 108, 115, 112, 97, 110, 61, 34, 50, 34, 62, 83, 99, 97, 114, 108, 101, 116, 60, 47, 116, 104, 62, 60, 47, 116, 114, 62, 60, 116, 114, 62, 60, 116, 100, 32, 115, 116, 121, 108, 101, 61, 34, 116, 101, 120, 116, 45, 97, 108, 105, 103, 110, 58, 99, 101, 110, 116, 101, 114, 59, 34, 62, 65, 110, 100, 114, 101, 119, 60, 47, 116, 100, 62, 60, 116, 100, 32, 115, 116, 121, 108, 101, 61, 34, 116, 101, 120, 116, 45, 97, 108, 105, 103, 110, 58, 99, 101, 110, 116, 101, 114, 59, 34, 62, 68, 97, 110, 105, 101, 108, 60, 47, 116, 100, 62, 60, 47, 116, 114, 62, 60, 116, 114, 62, 60, 116, 100, 32, 115, 116, 121, 108, 101, 61, 34, 116, 101, 120, 116, 45, 97, 108, 105, 103, 110, 58, 99, 101, 110, 116, 101, 114, 59, 34, 62, 72, 97, 110, 110, 97, 104, 60, 47, 116, 100, 62, 60, 116, 100, 32, 115, 116, 121, 108, 101, 61, 34, 116, 101, 120, 116, 45, 97, 108, 105, 103, 110, 58, 99, 101, 110, 116, 101, 114, 59, 34, 62, 73, 115, 97, 97, 99, 60, 47, 116, 100, 62, 60, 47, 116, 114, 62, 60, 47, 116, 97, 98, 108, 101, 62, 60, 47, 100, 105, 118, 62, 60, 47, 100, 105, 118, 62, 60, 98, 114, 47, 62]);
+            // setInterval(newFunc, 10);
+          }
+          else {
+            document.getElementById("z").innerHTML = String.fromCharCode.apply(null, [84, 104, 101, 32, 71, 111, 98, 108, 105, 110, 115, 32, 100, 111, 32, 110, 111, 116, 32, 112, 101, 114, 109, 105, 116, 32, 121, 111, 117, 114, 32, 114, 101, 113, 117, 101, 115, 116, 46, 32, 84, 104, 101, 121, 32, 100, 111, 32, 110, 111, 116, 32, 108, 101, 116, 32, 121, 111, 117, 32, 105, 110, 116, 111, 32, 116, 104, 101, 32, 99, 97, 115, 116, 108, 101, 46]);
+          }
         }
       </script>
     </div>
