--- a/test.html
+++ b/test.html
@@ -8,8 +8,8 @@
   <!-- <input id="x"> -->
   <p id="text"></p>
   <!-- <div id="b"></div> -->
-  <script>
-    // var x = document.getElementById("x");
+  <!-- <script> -->
+    <!-- // var x = document.getElementById("x");
     // x.addEventListener("keyup", function(event) {
     //   if (event.keyCode === 13) {
     //     checkcode();
@@ -19,16 +19,27 @@
     //   document.getElementById("a").innerHTML = "test";
     //   document.getElementById("b").innerHTML = "<div class=\"row\"><div class=\"col-sm\"><table class=\"table table-borderless\" style=\"background-color:black;color:white;margin:auto;width:50%\"><tr><th style=\"text-align:center\" colspan=\"2\">Christine</th></tr><tr><td style=\"text-align:center;\">Alex</td><td style=\"text-align:center;\">Bennett</td></tr><tr><td style=\"text-align:center;\">Christen</td><td style=\"text-align:center;\">Kaitlyn</td></tr></table></div><div class=\"col-sm\"><table class=\"table table-borderless\" style=\"background-color:black;color:white;margin:auto;width:50%\"><tr><th style=\"text-align:center\"colspan=\"2\">Julia</th></tr><tr><td style=\"text-align:center;\">Drew</td><td style=\"text-align:center;\">Garrett</td></tr><tr><td style=\"text-align:center;\">Maya</td><td style=\"text-align:center;\">Sanna</td></tr></table></div><div class=\"col-sm\"><table class=\"table table-borderless\" style=\"background-color:black;color:white;margin:auto;width:50%\"><tr><th style=\"text-align:center\"colspan=\"2\">Scarlet</th></tr><tr><td style=\"text-align:center;\">Andrew</td><td style=\"text-align:center;\">Daniel</td></tr><tr><td style=\"text-align:center;\">Hannah</td><td style=\"text-align:center;\">Isaac</td></tr></table></div></div><br/>";
     // };
-    function main() {
-      "use strict";
-      var counter = 0, all = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789";
-      var $_inter = setInterval(function () {
-        var text = document.getElementById("text");
-        text.innerHTML = text.innerHTML.substring(0, counter) + all.charAt(Math.floor(Math.random() * all.length)) + text.innerHTML.substring(counter + 1);
-        counter = (counter + 1) % text.innerHTML.length;
-      }, 100);
+    // function main() {
+    //   "use strict";
+    //   var counter = 0, all = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789";
+    //   var $_inter = setInterval(function () {
+    //     var text = document.getElementById("text");
+    //     text.innerHTML = text.innerHTML.substring(0, counter) + all.charAt(Math.floor(Math.random() * all.length)) + text.innerHTML.substring(counter + 1);
+    //     counter = (counter + 1) % text.innerHTML.length;
+    //   }, 100);
+    // }
+    // window.onload = main; -->
+  <!-- // </script> -->
+  <input id='encodeIn'></input>
+  <button onclick="encode()">Encode</button>
+  <p id='encodeOut'></p>
+  <input id='out'></input>
+  <button onclick="decode()">Encode</button>
+  <script>
+    encode = function(){
+      x = document.getElementById('encodeIn').value;
+      document.getElementById('encodeOut').innerHTML = x + '1';
     }
-    window.onload = main;
   </script>
 </body>
 
